* Mon Mar 19 2018 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 7.5.0-0
- Fix service name and related resources on Puppet Enterprise (PE)
  - Fix `$tmpdir` setting on PE
  - Fix Puppetserver service management on PE

* Tue Mar 06 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.5.0-0
- pupmod::master::simp_auth
  - Allow tweaking `allow` and `deny` rules for supported keydist auth rules
  - Removed Mcollective auth rules
  - Deprecated `$legacy_cacerts_all` and `$legacy_pki_keytabs_from_host`

* Fri Mar 02 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.5.0-0
- Updated to support Puppet 5
  - Fixed issues with the puppetserver configuration that could have broken
    Puppet 5 system configurations
  - Updated to support new server options
- Fixed issues with autosign and fileserver.conf defined types generating
  incorrect files
- Updated all puppet strings documentation
- Converted all templates to EPP
- Added process limits on the number of JRuby instances started designed to not
  overload the server in terms of either processor power or memory capabilities
- Added OracleLinux support

* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.5.0-0
- Add the missing puppetlabs/inifile dependency to the metadata.json
- Fixed puppet-lint problem

* Mon Oct 02 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.1-0
- Fixed bug where `:selinux_config_mode` is tested even when `:selinux` is
  false.

* Mon Sep 11 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.4.0-0
- Add SHA256-based option to generate the minute parameter for
  a client's puppet agent cron from its IP address. This option
  is intended mitigate the undesirable clustering of client puppet
  agent runs, when the number of IPs to be transformed is less
  than the minute range over which the randomization is requested
  (60) and/or the client IPs are not linearly assigned.

* Tue Aug 01 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.4.0-0